@@ -6,4 +6,12 @@
 #
 ###############################################################################
 
-bin.includes = feature.xml
+bin.includes = feature.xml,\
+               feature.properties
+
+src.includes = .classpath,\
+               .project,\
+               ChangeLog,\
+               build.properties,\
+               feature.properties,\
+               feature.xml
