@@ -1,3 +1,11 @@
+2005-05-18  Jeremy Handcock  <handcock@redhat.com>
+
+	* feature.xml 
+	(feature): Remove rpm.propertypage plug-in temporarily.
+	(requires): Remove CDT core dependency.
+	* build.properties (bin.includes): Correct.
+	(src.includes): Ditto.
+
 2004-11-11  Rick Moseley  <rmoseley@redhat.com>
 
 	* change versions to 1.1 from 1.2
